# MLModel

./: .gitignore  LICENSE  README.md
backend/: README.md  batch-export.csv  mlflow.db  pyproject.toml
backend/mlruns/1/202bfd391e074590803bf2b55987a2f6/artifacts/: model_run.json
backend/mlruns/1/2783a37e65e84b69b8fa00223ab05ff4/artifacts/: model_run.json
backend/mlruns/1/4737e91d233541b282e2f88c2f275e1d/artifacts/: model_run.json
backend/mlruns/1/4b3b1954728942618180192574ace098/artifacts/: model_run.json
backend/mlruns/1/b3a04192c4c846c98891441e1d352a68/artifacts/: model_run.json
backend/src/mlmodel/: __init__.py  main.py
backend/src/mlmodel/core/: config.py  units.py
backend/src/mlmodel/integrations/: mlflow_client.py  rockphypy_compat.py
backend/src/mlmodel/repositories/: analysis_repository.py  analysis_repository_factory.py  local_analysis_repository.py  local_model_run_repository.py  local_sample_repository.py  model_run_repository.py  model_run_repository_factory.py  postgres_analysis_repository.py  postgres_model_run_repository.py  sample_repository.py
backend/src/mlmodel/schemas/: analyses.py  analytics.py  exports.py  filters.py  model_runs.py  persistence.py  rock_physics.py  samples.py
backend/src/mlmodel/services/: analysis_service.py  analytics_service.py  export_service.py  model_run_service.py  rock_physics_service.py  sample_filter.py  sample_service.py
backend/tests/: test_analyses.py  test_analytics.py  test_config.py  test_exports.py  test_health.py  test_model_runs.py  test_rock_physics.py  test_samples.py  test_units.py
(+39 files in other folders)
